# cicd-demo

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml
src/: CMakeLists.txt  hello_world_server.cpp  hello_world_server.h  main.cpp
tests/: CMakeLists.txt  server_tests.cpp
